<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="duaa.traineeproject.Page.TraineeViewPager">


    <FrameLayout
        android:id="@+id/containerTrainee"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />


    <LinearLayout
        android:id="@+id/navigation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#efefef" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <duaa.traineeproject.view.FontTextViewRegular
                android:id="@+id/addTrainee"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/addTrainee"
                android:textColor="#bdbdbd"
                android:textSize="12sp" />

            <duaa.traineeproject.view.FontTextViewRegular
                android:id="@+id/showTrainee"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/showTrainee"
                android:textColor="#bdbdbd"
                android:textSize="12sp" />

            <duaa.traineeproject.view.FontTextViewRegular
                android:id="@+id/showDeletedTrainee"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/showOldTrainee"
                android:textColor="#bdbdbd"
                android:textSize="12sp" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
