<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <FrameLayout
            android:id="@+id/main.framelayout.title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center_horizontal"
            >
            <duaa.traineeproject.view.FontTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="الجامعات"
                android:gravity="center_vertical"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:paddingRight="10dp"
                />

        </FrameLayout>
    </android.support.design.widget.AppBarLayout>


    <FrameLayout
        android:id="@+id/containerUniversity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />


    <LinearLayout
        android:id="@+id/navigation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#efefef" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <duaa.traineeproject.view.FontTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/addUniversity"
                android:textColor="#bdbdbd"
                android:textSize="12sp"
                android:layout_weight="1"
                android:id="@+id/addUniversity"
                />

            <duaa.traineeproject.view.FontTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/addFaculty"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/addFaculty"
                android:textColor="#bdbdbd"
                android:layout_weight="1"
                android:textSize="12sp" />

            <duaa.traineeproject.view.FontTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/addSpecialization"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/addSpecialization"
                android:textColor="#bdbdbd"
                android:layout_weight="1"
                android:textSize="12sp" />


            <duaa.traineeproject.view.FontTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/university"
                android:textColor="#bdbdbd"
                android:textSize="12sp"
                android:layout_weight="1"
                android:id="@+id/university"
                />

        </LinearLayout>

    </LinearLayout>




</LinearLayout>
