<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bluee"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="RtlCompat">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="end|bottom"
            android:layout_marginStart="180dp"
            android:layout_marginTop="200dp"
            android:translationX="160dp"
            android:translationY="80dp"
            app:srcCompat="@drawable/ic_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent">
                <!--android:theme="@style/AppTheme.AppBarOverlay"-->

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="10dp"

                    >

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="55dp" />


                    <duaa.traineeproject.view.FontTextViewRegular
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/app_name"
                        android:textSize="17sp"
                        android:textStyle="bold"

                        />


                </FrameLayout>
            </android.support.design.widget.AppBarLayout>

            <duaa.traineeproject.view.FontTextViewRegular
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="100dp"
                android:background="@mipmap/input"
                android:gravity="center|start"
                android:hint="@string/email"
                android:paddingEnd="25dp"
                android:paddingStart="25dp"
                android:textSize="15sp"

                />


            <duaa.traineeproject.view.FontTextViewRegular
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/input"
                android:gravity="center|start"
                android:hint="@string/password"
                android:paddingEnd="25dp"
                android:paddingStart="25dp"
                android:textSize="15sp"

                />

            <duaa.traineeproject.view.FontTextViewRegular
                android:id="@+id/forgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:text="@string/ForgetPassword"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <duaa.traineeproject.view.FontButtonRegular
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="25dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"

                />


            <!--<duaa.traineeproject.view.FontTextViewRegular-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:text="@string/newAccont"-->
            <!--android:textColor="@color/black"-->
            <!--android:textSize="14sp" />-->

            <!--<com.example.duaa.sportier.view.FontTextViewRegular-->
            <!--android:id="@+id/register"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="@string/register"-->
            <!--android:textColor="@color/red"-->
            <!--android:textSize="13sp"-->
            <!--android:textStyle="bold" />-->


        </LinearLayout>
    </FrameLayout>
</ScrollView>
