<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="duaa.traineeproject.Fragment.AddTrainees"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        >

        <duaa.traineeproject.view.FontTextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/silver"
            android:text="تسجيل متدرب جديد "
            android:textStyle="bold"
            android:textSize="15sp"
            />

        <duaa.traineeproject.view.FontEditTextViewRegular
            android:id="@+id/traineeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/userName"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_edittext"
            android:textSize="13sp"

            />

        <duaa.traineeproject.view.FontEditTextViewRegular
            android:id="@+id/idNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/IDPersonNumber"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_edittext"
            android:textSize="13sp"
            android:inputType="number"

            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:id="@+id/radioGroup"

            >
            <RadioButton
                android:id="@+id/radio1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ذكر"
                />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="أنثى"
                />
        </RadioGroup>


        <duaa.traineeproject.view.FontEditTextViewRegular
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/password"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_edittext"
            android:textSize="13sp"

            />


        <duaa.traineeproject.view.FontEditTextViewRegular
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/phoneNumber"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_edittext"
            android:textSize="13sp"
            android:inputType="number"

            />

        <duaa.traineeproject.view.FontEditTextViewRegular
            android:id="@+id/mobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/mobileNumber"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_edittext"
            android:textSize="13sp"
            android:inputType="number"

            />

        <LinearLayout
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:background="@drawable/background_edittext"
            >

            <ImageView
                android:id="@+id/iconType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_drop_down_black_24dp" />


            <duaa.traineeproject.view.FontTextViewRegular
                android:id="@+id/textType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:enabled="false"
                android:hint="نوع التدريب"
                android:textColor="@color/black"
                android:textColorHint="#a4a4a4"
                android:textSize="14sp" />


        </LinearLayout>

        <duaa.traineeproject.view.FontEditTextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/IDNumber"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_edittext"
            android:textSize="13sp"
            android:inputType="number"


            />

        <LinearLayout
            android:id="@+id/university"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:background="@drawable/background_edittext"
            >

            <ImageView
                android:id="@+id/iconChooseUniversity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_drop_down_black_24dp" />


            <duaa.traineeproject.view.FontTextViewRegular
                android:id="@+id/place_textAdvertisment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:enabled="false"
                android:hint="اختر الجامعة"
                android:textColor="@color/black"
                android:textColorHint="#a4a4a4"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/faculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:background="@drawable/background_edittext"
            android:padding="12dp">

            <ImageView
                android:id="@+id/iconFaculty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_drop_down_black_24dp" />


            <duaa.traineeproject.view.FontTextViewRegular
                android:id="@+id/facultyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:enabled="false"
                android:hint="اختر الكلية"
                android:textColor="@color/black"
                android:textColorHint="#a4a4a4"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/spec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:background="@drawable/background_edittext"
            android:padding="12dp">

            <ImageView
                android:id="@+id/iconSpec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_drop_down_black_24dp" />


            <duaa.traineeproject.view.FontTextViewRegular
                android:id="@+id/textSpec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:enabled="false"
                android:hint="اختر التخصص"
                android:textColor="@color/black"
                android:textColorHint="#a4a4a4"
                android:textSize="14sp" />


        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <duaa.traineeproject.view.FontEditTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/background_edittext"
                android:padding="13dp"
                android:textSize="13sp"
                android:enabled="false"
                android:hint="صورة الكتاب"

                />

            <ImageView
                android:id="@+id/upload"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:src="@drawable/upload"
                android:padding="8dp"
                android:background="@drawable/background_buttonn"

                />

        </FrameLayout>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            app:cardCornerRadius="10dp"
            android:layout_marginRight="10dp"

            >

            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="gone"
                android:scaleType="fitXY"

                />
        </android.support.v7.widget.CardView>
            <duaa.traineeproject.view.FontTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_place"
                android:text="العنوان"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                tools:ignore="RtlCompat" />



            <duaa.traineeproject.view.FontEditTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@drawable/background_edittext"
                android:textSize="13sp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10dp"

                />


        <duaa.traineeproject.view.FontEditTextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/email"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_edittext"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"

            />

        <duaa.traineeproject.view.FontButtonRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"


            />
    </LinearLayout>


</ScrollView>

